Fixes #2353